  [Michele Simionato]
  * Introduced a compact representation of the GMFs as a single array

  [Graeme Weatherill]
  * Implements Dost et al (2004) Induced Seismicity GMPE
  * Implements Atkinson (2015) Induced Seismicity GMPE
  * Adds new tectonic region type "Induced" to constants

  [Graeme Weatherill]
  * Adds 'hypo_loc' slot to RuptureContext object
  * Implements Abrahamson et al. (2015) BC Hydro GMPE
  * Adds backarc term to the Site and SiteCollection object

  [Marco Pagani]
  * Fixes a bug in the calculation of the hanging wall term of the Abrahamson
    et al. (2014)

  [Yen-Shin Chen]
  * Simple fault: added a method to finds the index of the fault patch including the hypocentre.
  * Base surface: fixes mesh input in get_hypo_location method
  * Near fault: implementing the Chiou & Spudich(2014) direcitivty model, the methods needed in the model.

  [Yen-Shin Chen]
  * Simple fault: added a method to retrieve the vertexes of a patch given its index
  * Base surface: added a method to get a set of point representing a resampled top edge

python-oq-hazardlib (0.13.1-0) precise; urgency=low

  [Graeme Weatherill]
  * Fixes area hypocentral depth bug

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Mon, 02 Mar 2015 09:40:47 +0100

python-oq-hazardlib (0.13.0-0) precise; urgency=low

  [Marco Pagani]
  * Implements Ask2014 GMPE

  [Graeme Weatherill]
  * Implements Rietbrock et al (2013) GMPE

  [Yen-Shin Chen]
  * enable to change the hypocentre location.

  [Marco Pagani]
  * Gridsource added

  [Michele Simionato]
  * Added a test sensitive to the underlying distance libraries

  [Marco Pagani]
  * Ry0 support

  [Graeme Weatherill]
  * Implements Bindi et al (2014) GMPE

  [Laurentiu Danciu]
  * Implements Cf2008 for Swiss GMPE

  [Graeme Weatherill]
  * Implements Cauzzi et al (2014) GMPE
  * Implements PEER adaptation of Chiou & Youngs 2014

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Wed, 25 Feb 2015 16:04:03 +0100
