@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Added a method "is_within" to the sources, to check efficiently if a
+    source is close to a geometric object
   * Introduced a compact representation of the GMFs as a single array
 
   [Graeme Weatherill]
